# UniversalNumbers.jl

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Project.toml  README.md
.github/workflows/: ci.yml
docs/: Project.toml  README.md  make.jl
docs/src/: api.md  building.md  index.md  number-systems.md
examples/: Project.toml  amg_precon.jl  amg_solve.jl  arithmetic.jl  chebyshev.jl  experiment_template.jl  inspect_bits.jl  iterative_solvers.jl  linalg.jl  lorenz.jl  lu.jl  maths.jl  mpir.jl  qr.jl  quire.jl  sparse_solve.jl  sparsemat.jl  template.jl  test_matrices.jl  tests.jl
src/: LU.jl  QR.jl  UniversalNumbers.jl  about.jl  libuniversal_wrapper.cpp  lut8.jl  quire.jl
test/: README.md  benchmark.jl  broadcasting.jl  la.jl  linalg_lu.jl  linalg_qr.jl  lns.jl  math_linalg.jl  posits.jl  printbits.jl  runtests.jl  takums.jl
